--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -710,12 +710,23 @@ handle_preemption_timer()  // preemption timer处理
  ├─ handle_fastpath_preemption_timer(vcpu); // 
  |   ├─ kvm_lapic_expired_hv_timer(vcpu); // 清空lapci timer的pending
  |   |   ├─ preempt_disable(); // 禁用抢占
- |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即TMICT初始计数寄存器值, 即TMICT寄存器的值(只不过转换成ns单位)
- |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // TMICT为0的话, 意味着停止一次性/周期性timer, 则设置tscdeadline为0然后返回
- |   |   ├─ limit_periodic_timer_frequency(apic); //
- |   |   ├─ deadline = apic->lapic_timer.period; // 等于TMICT
- |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, 虚拟机tsc+deadline
- |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now + deadline
+ |   |   ├─ cancel_hv_timer(apic); // 取消hv timer
+ |   |   |   ├─ kvm_x86_ops.cancel_hv_timer(apic->vcpu); // 取消hv timer
+ |   |   |   |   └─ to_vmx(vcpu)->hv_deadline_tsc = -1; // 
+ |   |   |   └─ ktimer->hv_timer_in_use = false; // 设置apic timer的hv timer不在使用
+ |   |   ├─ apic_timer_expired(apic, false); // 
+ |   |   |   ├─ kvm_get_running_vcpu();
+ |   |   |   └─ kvm_apic_local_deliver(); //
+ |   |   |   |   └─ __apic_accept_irq();
+ |   |   |   |       └─ vmx_deliver_posted_interrupt();
+ |   |   |               └─ kvm_get_running_vcpu();
+ |   |   |   ├─ apic_lvtt_period() && apic->lapic_timer.period; // 周期性的
+ |       |   |   ├─ advance_periodic_target_expiration();// 已经过期, 对于周期性的, 设置周期性下一次目标超时时间
+ |       |   |   |   ├─ apic->lapic_timer.target_expiration = ktime_add_ns(apic->lapic_timer.target_expiration, apic->lapic_timer.period) // 下一个周期的超时时间
+ |       |   |   |   ├─ delta = ktime_sub(apic->lapic_timer.target_expiration, now); // 下一个周期的超时时间和现在时间的差值
+ |       |   |   |   └─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, delta); // 设置tscdeadline = 虚拟机中当前tsc + 差值
+ |       |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 一次性或者周期性的
+ |   |   └─ preempt_disable(); // 打开抢占
  |   └─ restart_apic_timer();  // 重启定时器
  |       ├─ preempt_disable(); // 关闭抢占
  |       ├─ !period(apic) && pending; return;// 如果apic timer当前不是周期模式(即一次性/tscdeadline模式)而且有pending事件, 直接返回, 不重启
@@ -729,16 +740,7 @@ handle_preemption_timer()  // preemption timer处理
  |       |   |   └─ *expired = !delta_tsc; // 设置是否到期
  |       |   ├─ ktimer->hv_timer_in_use = true; // 设置apic timer的hv timer在使用
  |       |   ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
- |       |   ├─ cancel_hv_timer(apic); // 非周期性且有timer pending, 取消hv timer
- |       |   |   ├─ kvm_x86_ops.cancel_hv_timer(apic->vcpu); // 取消hv timer
- |       |   |   |   └─ to_vmx(vcpu)->hv_deadline_tsc = -1; // 
- |       |   |   └─ ktimer->hv_timer_in_use = false; // 设置apic timer的hv timer不在使用
- |       |   ├─ apic_timer_expired(apic, false); // 非周期性, 没有pending且已经到期, 
- |       |   |   ├─ kvm_get_running_vcpu();
- |       |   |   └─ kvm_apic_local_deliver(); //
- |       |   |       └─ __apic_accept_irq();
- |       |   |           └─ vmx_deliver_posted_interrupt();
- |       |   |               └─ kvm_get_running_vcpu();
+
  |       |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
  |       |   |   └─ vmx_cancel_hv_timer(); //
  |       ├─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
@@ -808,6 +810,29 @@ static fastpath_t handle_fastpath_preemption_timer(struct kvm_vcpu *vcpu)
         }
 
         return EXIT_FASTPATH_NONE;
+}
+```
+
+```cpp
+// arch/x86/kvm/lapic.c
+void kvm_lapic_expired_hv_timer(struct kvm_vcpu *vcpu)
+{
+        struct kvm_lapic *apic = vcpu->arch.apic;
+
+        preempt_disable();
+        /* If the preempt notifier has already run, it also called apic_timer_expired */
+        if (!apic->lapic_timer.hv_timer_in_use)
+                goto out;
+        WARN_ON(rcuwait_active(&vcpu->wait));
+        cancel_hv_timer(apic);
+        apic_timer_expired(apic, false);
+
+        if (apic_lvtt_period(apic) && apic->lapic_timer.period) {
+                advance_periodic_target_expiration(apic);
+                restart_apic_timer(apic);
+        }
+out:
+        preempt_enable();
 }
 ```
 
