--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
@@ -3,6 +3,7 @@
 
 <!-- code_chunk_output -->
 
+- [基本原理](#基本原理)
 - [1. 启用posted-interrupt处理机制](#1-启用posted-interrupt处理机制)
 - [2. posted-interrupt的通知向量号](#2-posted-interrupt的通知向量号)
 - [3. posted-interrupt 描述符](#3-posted-interrupt-描述符)
@@ -11,11 +12,11 @@
 
 <!-- /code_chunk_output -->
 
-posted-interrupt processing(通告中断处理)在较早处理器并不支持. VMM通过**检查**`Pin-based VM-execution control`字段的"`process posted interrupts`"位(bit 7)是否允许设为1来检查处理器**是否支持**(见2.5.6.1).
+# 基本原理
 
-`posted-interrupt`(直译为"通告中断")是指**VMM**张贴出来给guest进行处理的虚拟中断. 
+posted-interrupt processing(通告中断处理)在较早处理器并不支持. VMM通过**检查**`Pin-based VM-execution control`字段的"`process posted interrupts`"位(bit 7)**是否允许设为1**来检查处理器**是否支持**(见2.5.6.1).
 
-**guest**收到一个**通知**(**向量号**为**posted-interrupt notification vector**的**外部中断**)后, 将张贴的**通告中断请求列表！！！** 复制到**virtual\-APIC page！！！**页面的**VIRR**里, 从而**更新虚拟中断请求列表**, 然后进行**虚拟中断的评估与delivery**.
+`posted-interrupt`(直译为"通告中断")是指**VMM**张贴出来给guest进行处理的**虚拟中断**. **guest**收到一个**通知**(**向量号**为**posted-interrupt notification vector**的**外部中断！！！**)后, 将张贴的**通告中断请求列表！！！** 复制到**virtual\-APIC page！！！**页面的**VIRR**里, 从而**更新虚拟中断请求列表**, 然后进行**虚拟中断的评估与delivery**.
 
 # 1. 启用posted-interrupt处理机制
 
