--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
@@ -23,16 +23,18 @@ posted-interrupt processing(通告中断处理)在较早处理器并不支持. V
 posted-interrupt processing 机制用来处理 **VMM 预先！！！为 guest 设置的 virtual-interrupt**（虚拟中断）。
 
 VMM 将`“process posted interrupts”`位置1开启 posted-interrupt processing 机制，同时也需要满足下面的设置（参见 4.4.1.1 节）。
-* `pin-based VM-execution control` 字段的“external-interrupt exiting”位必须为 1。
-* `VM-exit control` 字段的“`acknowledge interrupt on exit`”位必须为 1
+* `pin-based VM-execution control` 字段的“external-interrupt exiting”位必须为 1。表明外部中断请求将发生`VM-exit`.
+* `VM-exit control` 字段的“`acknowledge interrupt on exit`”位必须为 1. 
 
-由此可见，当 local APIC 收到外部中断请求时，要么产生 `VM-exit`，要么就执行**虚拟中断的评估与 delivery 操作**。“`acknowledge interrupt on exit`”位为 1, 表明**处理器**收到**外部中断请求**后，将**响应**中断控制器（local APIC）从而**取得中断向量信息**。
+由此可见，当 local APIC 收到外部中断请求时，要么产生 `VM-exit`，要么就执行**虚拟中断的评估与 delivery 操作**。
+
+“`acknowledge interrupt on exit`”位为 1, 表明**处理器**收到**外部中断请求**后，将**响应**中断控制器（local APIC）从而**取得中断向量信息**。
 
 处理器响应 local APIC 得到的中断向量被称为“physical vector”（**物理向量号**），处理器将使用这个 **physical vector** 与“**notification vector**”（通知向量）进行对比。
 
 # 2. posted-interrupt的通知向量号
 
-VMM需要在`posted-interrupt notification vector`字段里提供一个**通知向量号**(见3.5.13). 那么, local APIC接收到的这个外部中断可被成为"通知中断", 其作用是**通知guest进行posted-interrupt的处理**.
+VMM需要在`posted-interrupt notification vector`字段里提供一个**通知向量号**(见3.5.13). 那么(当外部中断), local APIC接收到的这个外部中断可被成为"通知中断", 其作用是**通知guest进行posted-interrupt的处理**.
 
 在**guest！！！** 中, 当local APIC收到外部中断请求时, 处理器检查这个外部中断请求的向量号与`notification vector`(通知向量号)是否相等(即检查是否为通知中断). 相等则将posted-interrupt描述符(`posted-interrupt descriptor`)内的**PIR请求列表**复制到**VIRR**, 形成**新的虚拟中断请求列表**, 然后执行`virtual-interrupt`的评估与delivery操作. 如图7-8.
 
