--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
@@ -28,7 +28,7 @@ VMM 将`“process posted interrupts”`位置1开启 posted-interrupt processin
 
 由此可见，当 local APIC 收到外部中断请求时，要么产生 `VM-exit`，要么就执行**虚拟中断的评估与 delivery 操作**。
 
-“`acknowledge interrupt on exit`”位为 1, 表明**处理器**收到**外部中断请求**后，将**响应**中断控制器（local APIC）从而**取得中断向量信息**。
+“`acknowledge interrupt on exit`”位为 1, 表明当由于外部中断而产生`VM-exit`时(它不控制这个行为), **处理器**将**响应**中断控制器（local APIC）的中断请求, 清除外部中断对应的**Requst位**. 从中断控制器**取得中断向量信息**(包括向量号等), 保存在VM-exit interrupt information字段中。
 
 处理器响应 local APIC 得到的中断向量被称为“physical vector”（**物理向量号**），处理器将使用这个 **physical vector** 与“**notification vector**”（通知向量）进行对比。
 
