--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -98,9 +98,9 @@ APIC定时器一般包含2-3种定时器模式，前两种（周期触发periodi
 在one\-shot模式里，当current\-count的值减为0时，产生**timer中断**，**current\-count的值维持在0不变**，除非**写入新的initial\-count值**。
 
 ```assembly
-； 设置 LVT timer
+； 设置 LVT timer, LVTT寄存器
        mov DWORD [APIC_BASE + LVT_TIMER]，TIMER_ONE_SHOT | APIC_TIMER_VECTOR
-； 写入 initial-count 值
+； 写入 initial-count 值, TMICT寄存器
        mov DWORD [APIC_BASE + TIMER_ICR]，256
 ```
 
@@ -126,9 +126,9 @@ APIC定时器一般包含2-3种定时器模式，前两种（周期触发periodi
 local APIC将在**current\-count寄存器**里装入**initial\-count**值**重新开始计数！！！**，从而**周期性**地产生timer中断，除非**写入0值**到`initial-count`寄存器里。
 
 ```x86asm
-； 设置 LVT timer
+； 设置 LVT timer, LVTT寄存器
        mov DWORD [APIC_BASE + LVT_TIMER]，0x00020030  ； 使用periodic 模式
-； 写入 initial-count 值
+； 写入 initial-count 值, TMICT寄存器
        mov DWORD [APIC_BASE + TIMER_ICR]，0xff
 ```
 
@@ -170,11 +170,11 @@ TSC见`15.6`.
        cupid
        bt ecx，24       ； TSC-deadline 位
        jnc no_support
-； 设置 TSC-deadline 模式
+； 设置 TSC-deadline 模式, 操作LVTT寄存器
        mov DWORD [APIC_BASE + LVT_TIMER]，0x00040030
-； 写入目标TSC值
+； 写入目标TSC值, 操作IA32_TSC_DEADLINE MSR寄存器
        rdtsc        ； 读当前 TSC 值
-       mov ecx，IA32_TSC_DEADLINE
+       mov ecx, IA32_TSC_DEADLINE
        add eax，256      ； current_TSC + 256
        wrmsr        ； 写入目标TSC值
        ；；
