--- a/Hided/Git/1. tips.md
+++ b/Hided/Git/1. tips.md
@@ -8,6 +8,7 @@
 - [3. add后commit前](#3-add后commit前)
 - [4. 修改未完成](#4-修改未完成)
 - [5. 删除某个远程分支](#5-删除某个远程分支)
+- [修改commit 的注释](#修改commit-的注释)
 - [6. git log的通用配置命令](#6-git-log的通用配置命令)
 - [7. 基于某个分支创建分支](#7-基于某个分支创建分支)
 - [8. 查看某文件修改历史](#8-查看某文件修改历史)
@@ -85,6 +86,10 @@ $ git push origin :master
 $ git push origin --delete master
 ```
 
+# 修改commit 的注释
+
+https://blog.csdn.net/lxf0613050210/article/details/52525083
+
 # 6. git log的通用配置命令
 
 ```
@@ -109,6 +114,14 @@ git log -p filename    可以显示该文件每次提交的diff
 git show commit-id     根据commit-id查看某个提交
 
 git show commit-id filename    查看某次提交中的某个文件变化
+```
+
+```
+tig arch/x86/kvm/lapic.c        文件的commit记录, 只显示commit的subject
+
+tig log arch/x86/kvm/lapic.c    文件的commit记录, 显示详细的change log
+
+
 ```
 
 # 9. 文件名大小写
