--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -4,6 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1. APIC timer中断](#1-apic-timer中断)
+  - [硬件原理](#硬件原理)
   - [1.1. 流程简介](#11-流程简介)
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
@@ -38,6 +39,10 @@
 <!-- /code_chunk_output -->
 
 # 1. APIC timer中断
+
+## 硬件原理
+
+见`Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md`
 
 ## 1.1. 流程简介
 
