--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -3,30 +3,27 @@
 
 <!-- code_chunk_output -->
 
-- [1. 功能检测的必要性](#1-功能检测的必要性)
-- [2. 检测是否支持VMX架构](#2-检测是否支持vmx架构)
-- [3. 通过MSR组检查VMX能力](#3-通过msr组检查vmx能力)
-- [4. 例子 2-1](#4-例子-2-1)
-- [5. 基本信息检测](#5-基本信息检测)
-- [6. 允许为 0 以及允许为 1 位](#6-允许为-0-以及允许为-1-位)
-  - [6.1. 决定 VMX 支持的功能](#61-决定-vmx-支持的功能)
-  - [6.2. 控制字段设置算法](#62-控制字段设置算法)
-- [7. VM-execution 控制字段](#7-vm-execution-控制字段)
-  - [7.1. Pin-based VM-execution control 字段](#71-pin-based-vm-execution-control-字段)
-  - [7.2. primary processor-based VM-execution control 字段](#72-primary-processor-based-vm-execution-control-字段)
-  - [7.3. secondary processor-based VM-execution control 字段](#73-secondary-processor-based-vm-execution-control-字段)
-- [8. VM-exit control 字段](#8-vm-exit-control-字段)
-- [9. VM-entry control 字段](#9-vm-entry-control-字段)
-- [10. VM-function control 字段](#10-vm-function-control-字段)
-- [11. CR0 与 CR4 的固定位](#11-cr0-与-cr4-的固定位)
-  - [11.1. CR0 与 CR4 寄存器设置算法](#111-cr0-与-cr4-寄存器设置算法)
-- [12. VMX 杂项信息](#12-vmx-杂项信息)
-- [13. VMCS 区域字段 index 值](#13-vmcs-区域字段-index-值)
-- [14. VPID 与 EPT 能力](#14-vpid-与-ept-能力)
+- [1. 检测是否支持VMX架构](#1-检测是否支持vmx架构)
+- [2. 通过MSR组检查VMX能力](#2-通过msr组检查vmx能力)
+- [3. 例子 2-1](#3-例子-2-1)
+- [4. 基本信息检测](#4-基本信息检测)
+- [5. 允许为 0 以及允许为 1 位](#5-允许为-0-以及允许为-1-位)
+  - [5.1. 决定 VMX 支持的功能](#51-决定-vmx-支持的功能)
+  - [5.2. 控制字段设置算法](#52-控制字段设置算法)
+- [6. VM-execution 控制字段](#6-vm-execution-控制字段)
+  - [6.1. Pin-based VM-execution control 字段](#61-pin-based-vm-execution-control-字段)
+  - [6.2. primary processor-based VM-execution control 字段](#62-primary-processor-based-vm-execution-control-字段)
+  - [6.3. secondary processor-based VM-execution control 字段](#63-secondary-processor-based-vm-execution-control-字段)
+- [7. VM-exit control 字段](#7-vm-exit-control-字段)
+- [8. VM-entry control 字段](#8-vm-entry-control-字段)
+- [9. VM-function control 字段](#9-vm-function-control-字段)
+- [10. CR0 与 CR4 的固定位](#10-cr0-与-cr4-的固定位)
+  - [10.1. CR0 与 CR4 寄存器设置算法](#101-cr0-与-cr4-寄存器设置算法)
+- [11. VMX 杂项信息](#11-vmx-杂项信息)
+- [12. VMCS 区域字段 index 值](#12-vmcs-区域字段-index-值)
+- [13. VPID 与 EPT 能力](#13-vpid-与-ept-能力)
 
 <!-- /code_chunk_output -->
-
-# 1. 功能检测的必要性
 
 VMX架构中的很多功能在不同处理器架构有不同的支持, 比如之前提的 `VMX-preemption timer` 功能. 
 
@@ -34,11 +31,11 @@ VMX架构中的很多功能在不同处理器架构有不同的支持, 比如之
 
 注: 本书主要参照`Intel开发者手册` 2012年8月版, order number为: `325462-044US`.
 
-# 2. 检测是否支持VMX架构
+# 1. 检测是否支持VMX架构
 
 VMX 架构是否支持, 使用 `CPUID.01H:ECX.VMX[5]`位来进行检测(详细见2.2.3)
 
-# 3. 通过MSR组检查VMX能力
+# 2. 通过MSR组检查VMX能力
 
 VMX 架构提供了众多项目能力的检测, 包括: **VMX的基本信息**、**杂项信息**、**VPID与EPT能力**, 还有对**VMCS内**的`control fields`(**控制字段**)允许设置的位. 控制字段的位**允许被置为1**时, 代表着**处理器拥有这个能力**.
 
@@ -50,9 +47,9 @@ VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific
 
 ......
 
-# 4. 例子 2-1
+# 3. 例子 2-1
 
-# 5. 基本信息检测
+# 4. 基本信息检测
 
 `IA32_VMX_BASIC`寄存器用来检测 VMX 的基本能力信息, 如图 2-6 所示.
 
@@ -66,69 +63,85 @@ bit 55 位为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器
 
 bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 55 为 0 时, 这些 VMCS 字段的
 
-# 6. 允许为 0 以及允许为 1 位
+# 5. 允许为 0 以及允许为 1 位
 
 
 
-## 6.1. 决定 VMX 支持的功能
+## 5.1. 决定 VMX 支持的功能
 
 
 
-## 6.2. 控制字段设置算法
+## 5.2. 控制字段设置算法
 
 
 
-# 7. VM-execution 控制字段
+# 6. VM-execution 控制字段
 
 在 VMCS 区域的三个 VM-execution control 字段需要检查 VMX 能力寄存器来确认 default0 与 default1 位. 如下所示:
 
 
 
-## 7.1. Pin-based VM-execution control 字段
+## 6.1. Pin-based VM-execution control 字段
 
 
 
-## 7.2. primary processor-based VM-execution control 字段
+## 6.2. primary processor-based VM-execution control 字段
 
 
 
-## 7.3. secondary processor-based VM-execution control 字段
+## 6.3. secondary processor-based VM-execution control 字段
 
 
 
-# 8. VM-exit control 字段
+# 7. VM-exit control 字段
 
 
 
-# 9. VM-entry control 字段
+# 8. VM-entry control 字段
 
 
 
-# 10. VM-function control 字段
+# 9. VM-function control 字段
 
 
 
-# 11. CR0 与 CR4 的固定位
+# 10. CR0 与 CR4 的固定位
 
 
 
-## 11.1. CR0 与 CR4 寄存器设置算法
+## 10.1. CR0 与 CR4 寄存器设置算法
 
 
 
-# 12. VMX 杂项信息
+# 11. VMX 杂项信息
 
 `IA32_VMX_MISC`寄存器提供了一些vmx的杂项信息.
 
 ![2020-06-28-23-20-30.png](./images/2020-06-28-23-20-30.png)
 
+`bits 4:0`(5个bit) 提供一个 X 值，当 **TSC** 值的 `bit X` 改变时，`VMX-preemption timer count` 计数值将减 1。假如这个 X 值是 5, 那么表示当 TSC 的 `bit 5` 发生改变（0 变 1 或 1 变 0) 时, preemption timer count 计数值减 1。也就是说，**TSC 计数 32 次时**，preemption timer count值减 1.
+
+bit5 为 1 时，表示当发生 VM-exit 行为时，将保存IA32EFER.LMA 的值在 VM  entry control 字段的“IA-32 e mode guest”位里。只有当 VMX 支持 unrestricted guest（不受限制的 guest）功能时，这个位才为 1 值。
+
+bits8:6 是一个 mask 位值，提供虚拟处理器 Inactive 状态值的支持度，有下面的几个  Inactive 状态值：
+
+bit6 为 1 时，支持 HLT 状态
+
+bit7 为 1 时，支持 shutdown 状态
+
+obit8 为 1 时，支持 wait-for-SIPI 状态
+
+只有这些 Inactive 状态被支持时，才允许在 guest state 区域 activity state 字段设置相应的 Inactive 状态值。bits8:6 一般会返回 7（全部支持）。
+
+bits24:16 指示支持的 CR3- -target 值的数量，一般会返回 4 值，表示支持 4 个 CR3 寄存器目标值。bits27:25 返回一个 N 值，这个 N 值用来计算出在 MSR 列表（M-exit MSR-load、VM- exit MSR- -store 以及 VM- entry Msr-load 列表）里推荐的 MSR 最大个数。计算方法是：个数= (N+1) ×512。一般会返回 0 值，表示列表里推荐最多支持 512 个 MSR。
+
+bit28 为 1 时，表示支持 IA32 SMM MONITOR CTL 寄存器的 bit2 位能被设为 1 值。这个 bit2 置位时，表示执行 VMXOFF 指令时，SMI 能被解开阻塞。一般情况下  VMXOFF 指令的执行将阻塞 SMI 请求。
+
+# 12. VMCS 区域字段 index 值
 
 
-# 13. VMCS 区域字段 index 值
 
-
-
-# 14. VPID 与 EPT 能力
+# 13. VPID 与 EPT 能力
 
 `IA32_VMX_EPT_VPID_CAP`寄存器提供**两方面**的能力检测, 包括 **EPT**(扩展页表)所支持的能力, 以及 **EPT 页面 cache**( `TLBs` 及 `paging-structure cache` )的能力.
 
