--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/1. Interrupt Source(中断源).md
@@ -4,7 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1. 中断源](#1-中断源)
-- [2. 硬件中断](#2-硬件中断)
+- [2. 硬件中断: External Interrupts](#2-硬件中断-external-interrupts)
   - [2.1. Maskable interrupt: 可屏蔽中断](#21-maskable-interrupt-可屏蔽中断)
   - [2.2. Non-Maskable Interrupt: NMI, 不可屏蔽中断](#22-non-maskable-interrupt-nmi-不可屏蔽中断)
 - [3. 软件中断](#3-软件中断)
@@ -15,21 +15,31 @@
 
 可**产生中断**的**中断源**来自:
 
-① **硬件**上产生的中断
+① External (hardware generated) interrupts: **硬件**上产生的中断, 也称为**外部中断！！！**
 
-② **软件**上发起的中断
+② Software-generated interrupts: **软件**上发起的中断
 
 在**硬件**上的来自于**处理器外部**和**处理器内部**. 处理器**外部硬件中断**来自**各种pin信号接口**和**Local APIC**的**LINT0**和**LINT1引脚**, 以及由**外部I/O APIC发送过来的中断消息**.
 
 在一个**支持APIC模块**的**处理器**上, 典型地,**LINT0**被连接到**ISA bus的8259A PIC(Programming Interrupt Controller**)上, **LINT1**会被连接到**NMI pin**上.
 
-# 2. 硬件中断
+# 2. 硬件中断: External Interrupts
 
-**外部硬件中断**来自**处理器**的**INTR pin**, **NMI pin**和**I/O APIC的中断消息**, 我们看下面关于APIC架构的图.
+外部中断通过**处理器**上的**引脚**(pins)或**local APIC**接收。 Pentium 4，Intel Xeon，P6系列和Pentium处理器上的主要中断引脚是`LINT [1：0]`引脚，它们连接到**local APIC**（请参见“高级可编程中断控制器（APIC）”）。 启用local APIC后，可以通过APIC的本地向量表（LVT, local vector table）对`LINT [1：0]`引脚**进行编程**，使其与任何处理器的异常或中断向量相关联。
 
-图1:
+当本地APIC是全局/硬件禁用，这些引脚分别被配置为INTR和NMI引脚。断言INTR引脚向处理器发出外部中断已经发生的信号。处理器从系统总线上读取由外部中断控制器提供的中断向量，例如8259A(参见6.2节，“异常和中断向量”)。断言NMI pin信号一个不可屏蔽的中断(NMI)，它被分配到中断向量2。
 
-![config](./images/1.png)
+
+
+**外部中断**来自**处理器**的**INTR pin**, **NMI pin**和**I/O APIC的中断消息**, 我们看下面关于APIC架构的图.
+
+图1, Xeon和P6系列的多处理器系统
+
+![2020-11-19-11-41-15.png](./images/2020-11-19-11-41-15.png)
+
+单处理器系统
+
+![2020-11-19-11-43-58.png](./images/2020-11-19-11-43-58.png)
 
 图2:
 
@@ -48,6 +58,11 @@
 ⑤ 在**MP环境**中, 处理器也响应**其他processor code发送过来的IPI(Interprocessor Interrupt)处理器间的中断**
 
 这些**IPI中断通过system bus**进行传递, 或许并不能称为硬件中断, 称为内部中断较为合适.
+
+
+
+
+当全局/硬件禁用了本地APIC时，这些引脚分别配置为INTR和NMI引脚。 置位INTR引脚会向处理器发出信号，表明发生了外部中断。 处理器从系统总线读取由外部中断控制器（例如8259A）提供的中断向量号（请参见第6.2节“异常和中断向量”）。 断言NMI引脚会发信号通知不可屏蔽中断（NMI），该中断被分配给中断向量2。
 
 ## 2.1. Maskable interrupt: 可屏蔽中断
 
