--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/2. 使用Local APIC.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/2. 使用Local APIC.md
@@ -18,7 +18,9 @@ local APIC的**核心功能**由**一组可编程的APIC寄存器**实现，在*
 
 注: cpuid指令用于Intel IA32架构下获取CPU信息, 详见其他内容
 
-**软件**首先需要检测**是否支持APIC on Chip上的local APIC**。使用**CPUID.01H：EDX[9]位**来检测，**EDX[9]=1时支持local APIC**。
+从**P6系列**处理器开始，可以使用**CPUID指令**检测芯片上local APIC的存在或不支持。
+
+**软件**首先需要检测**是否支持APIC on Chip上的local APIC**。使用`CPUID.01H：EDX[9]`位来检测，`EDX[9]=1`时支持local APIC。
 
 在P6和Pentium处理器后使用的将是APIC版本，从Pentium 4开始**默认使用的是xAPIC版本**。
 
