--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/3. Local APIC寄存器.md
@@ -113,7 +113,10 @@ LAPIC的寄存器有:
 
 下面是local APIC寄存器的完整列表，**APIC寄存器的基地址是FEE00000H**。
 
-![config](./images/11.png)
+![2020-11-19-17-50-44.png](./images/2020-11-19-17-50-44.png)
+![2020-11-19-17-50-59.png](./images/2020-11-19-17-50-59.png)
+
+注: 在基于Intel微架构 Nehalem 的处理器中，local APIC ID寄存器不再读写;它是只读的。
 
 这些local APIC寄存器共**占据了4K的页空间**，每个local APIC寄存器地址都是**16字节边界对齐**的，寄存器宽度分别为**32位、64位，以及256位**。
 
