--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/lapic_timer_advance/6. lapic timer提前到期.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/lapic_timer_advance/6. lapic timer提前到期.md
@@ -7,7 +7,7 @@ guest的lapic是通过host上的hrtimer模拟的，guest的timer到期后，vCPU
 1. git show 7c6a98df/d0659d94/6c19b753 查看第一次的代码修改(也可以看mail list), 如果有疑问, 可以查看修改的各个版本
 2. reset回第一版三个patch都有的版本的代码, 查看当时系统情况
 
-当时系统是通过hrtimer来模拟guest中tscdeadline timer，添加一个选项来提前到期，并在VM-entry时自旋忙等它一直到实际的到期时间。
+当时系统是通过hrtimer来模拟guest中tscdeadline timer，通过添加一个选项来提前到期，并在VM-entry时自旋忙等它一直到实际的到期时间。
 
 注意：这个选项需要**动态调整**来为特定的硬件/guest组合找到**合适的值**。 
 * 一种方法是衡量`apic_timer_fn`和`VM-entry`之间的**平均延迟**。
@@ -66,7 +66,7 @@ guest的lapic是通过host上的hrtimer模拟的，guest的timer到期后，vCPU
                        	apic_timer_expired(apic);
 ```
 
-在kvm_timer引入了一个expired_tscdeadline变量
+在kvm_timer引入了一个`expired_tscdeadline`变量
 
 ```diff
 --- a/arch/x86/kvm/lapic.h
@@ -251,6 +251,10 @@ KVM: x86: add option to advance tscdeadline hrtimer expiration, 涉及三个patc
 * v4: https://www.spinics.net/lists/kvm/msg111880.html
 * v5: https://www.spinics.net/lists/kvm/msg111895.html
 * v6(最终合入版本): https://lore.kernel.org/kvm/20141223205841.410988818@redhat.com/
+
+
+* KVM: x86: fix lapic_timer_int_injected with APIC-v, f9339860384aaa104d85f59b75921941b39a45fc
+* KVM: x86: revert "add method to test PIR bitmap vector", 2e6d015799d523dcce11c7d1465e6feb7b69fab1
 
 
 # 自动动态调节lapic_timer_advance_ns
