--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -1,4 +1,18 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 两个字段: info和error code](#1-两个字段-info和error-code)
+- [2. 处理NMI unblocking位](#2-处理nmi-unblocking位)
+- [3. 反射`#DF`异常: 异常嵌套](#3-反射df异常-异常嵌套)
+  - [3.1. 间接向量事件引发VM-exit](#31-间接向量事件引发vm-exit)
+  - [3.2. `DF`异常且间接VM-exit](#32-df异常且间接vm-exit)
+  - [3.3. `DF`异常且由`DF`直接导致VM-exit](#33-df异常且由df直接导致vm-exit)
+- [4. 处理 triple fault](#4-处理-triple-fault)
+- [5. 直接反射异常](#5-直接反射异常)
+
+<!-- /code_chunk_output -->
 
 也就是将中断注入给虚拟机???
 
@@ -21,7 +35,6 @@
 因此，每次**反射异常给guest** 时，VMM需要检查`VM-exit interruption information` 字段的`bit 12`, 做出相应的处理。
 
 # 3. 反射`#DF`异常: 异常嵌套
-
 
 小结: 当Guest在一个**异常向量A**的delivery期间(可能是由中断导致的)发生了另外一个**错误B**(不一定是异常), 如果
 1. 错误B导致了`VM-exit`.
@@ -119,8 +132,8 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 (1)由异常直接导致`VM-exit`时， 也就是`IDT-vectoring information`字段`bit 31`**为0**。
 
-(2)不属于表7-1中的第1类和第2类情况时(不产生`#DF`异常)，由于向量事件delivery期间遇到一 个异常而导致VM-exit。
+(2)不属于表7-1中的第1类和第2类情况时(不产生`#DF`异常)，由于向量事件delivery期间遇到一个异常而导致VM-exit。
 
 例如，guest 运行过程中引发了`#GP`异常，`#GP` 异常不导致VM-xit。但在`#GP`异常delivery期间遇到了`#PF`异常而导致VM-exit。 这种情况下并不会产生`#DF`异常，VMM需要直接将`#PF`异常反射给guest处理。
 
-VMM 可以直接将 VM-exit interruption information 字段的值赋值给 `VM-entryinterruption information` 字段, 将 `VM-exit interruption error code` 字段的值直接赋给 `VM-entry interruption error code` 字段(存在错误码时), 通过事件注入反射给 guest 处理.
+VMM 可以直接将 `VM-exit interruption information` 字段的值赋值给 `VM-entry interruption information` 字段, 将 `VM-exit interruption error code` 字段的值直接赋给 `VM-entry interruption error code` 字段(存在错误码时), 通过**事件注入**反射给 guest 处理.
