--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/preemption timer/7. preemption timer.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/preemption timer/7. preemption timer.md
@@ -23,11 +23,15 @@ v2: http://www.spinics.net/lists/kvm/msg133185.html
 v3: http://www.spinics.net/lists/kvm/msg133538.html
 v4: https://lore.kernel.org/kvm/1465852801-6684-1-git-send-email-yunhong.jiang@linux.intel.com/
 
-最终确定4个commit(根据git log默认顺序, 原顺序有些问题)
+最终确定4个commit(根据git log默认顺序, 原顺序有些问题, 被maintainer重新排序提交了)
 * kvm: lapic: separate start_sw_tscdeadline from start_apic_timer, 53f9eedff713bab262b64682ad1abb1e8116d041
 * KVM: x86: support using the vmx preemption timer for tsc deadline timer, ce7a058a2117f0bca2f42f2870a97bfa9aa8e099
 * kvm: vmx: rename vmx_pre/post_block to pi_pre/post_block, bc22512bb24c480fae8ae96b233378ef96007590
 * kvm: vmx: hook preemption timer support, 64672c95ea4c2f7096e519e826076867e8ef0938
+
+
+
+
 
 
 
