--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -80,7 +80,7 @@ LVT timer寄存器属于7个local vector table寄存器之一。
 
 LVT timer**只能使用Fixed delivery模式和edge触发**，并且**必须提供一个vector值**。
 
-LVT计时器寄存器决定了当计时器计数为0时生成的计时器中断时传递给处理器的向量号vector。
+LVT计时器寄存器决定了当计时器计数为0时生成的计时器中断时传递给处理器的**向量号vector**。
 
 LVT计时器寄存器中的掩码标志可以用于掩码计时器中断。
 
