--- a/Hided/Git/5. merge和rebase.md
+++ b/Hided/Git/5. merge和rebase.md
@@ -87,7 +87,9 @@ rebase 会导致线性的历史没有分支
 
 在rebase的过程中，也许会出现**冲突**(conflict). 
 
-在这种情况，Git会**停止rebase**并会让你去解决冲突；在解决完冲突后，用"`git add`"命令去**更新这些内容的索引**(index), 然后，你**无需执行** `git commit`,只要执行:
+在这种情况，Git会**停止rebase**并会让你去解决冲突；
+
+在解决完冲突后，用"`git add`"命令去**更新这些内容的索引**(index), 然后，你**无需执行** `git commit`,只要执行:
 
 ```
 $ git rebase --continue
