--- a/Hided/Git/6. cherry-pick.md
+++ b/Hided/Git/6. cherry-pick.md
@@ -19,7 +19,7 @@
 
 这时分两种情况。
 
-- 一种情况是，你需要**另一个分支的所有代码变动**，那么就采用**合并**（**git merge**）。
+- 一种情况是，你需要**另一个分支的所有代码变动**，那么就采用**合并**（**git merge/rebase**）。
 - 另一种情况是，你只需要**部分代码变动**（某几个提交），这时可以采用 `Cherry pick`。
 
 将指定的提交（commit）应用于其他分支, 但是会**产生新的commit**.
@@ -182,3 +182,6 @@ $ git cherry-pick <commitHash>
 # 7. 参考
 
 http://www.ruanyifeng.com/blog/2020/04/git-cherry-pick.html
+
+
+https://blog.csdn.net/ybdesire/article/details/42145597 (none)
