--- a/Vim/1. 入门基础.md
+++ b/Vim/1. 入门基础.md
@@ -474,7 +474,7 @@ http://blog.csdn.net/salc3k/article/details/8222397
 
 ## 4.5. 正文替换
 
-利用 :s 命令可以实现字符串的替换，将第一个//之间的正则表达式替换成第二个//之间的字符串。
+利用 `:s` 命令可以实现字符串的替换，将第一个//之间的正则表达式替换成第二个//之间的字符串。
 
 具体的用法包括：
 
