--- a/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
@@ -983,7 +983,7 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 ## 7.2. 整体流程
 
-**执行vCPU**的请求首先发送到**kvm\_vcpu\_ioctl函数**中，然后**加载vCPU参数**，调用**kvm\_arch\_vcpu\_ioctl\_run**函数进入**具体的vCPU运行**环节。(arch/x86/kvm/x86.c)
+**执行vCPU**的请求首先发送到**kvm\_vcpu\_ioctl函数**中，然后**加载vCPU参数**，调用`kvm_arch_vcpu_ioctl_run`函数进入**具体的vCPU运行**环节。(arch/x86/kvm/x86.c)
 
 ```cpp
 kvm_arch_vcpu_ioctl_run()                	// vcpu运行
