--- a/Tools/Mac/安装初始化过程.md
+++ b/Tools/Mac/安装初始化过程.md
@@ -113,6 +113,7 @@
   - [2.21. VMware Fusion](#221-vmware-fusion)
   - [2.22. 安装qemu](#222-安装qemu)
   - [2.23. Bartender 3](#223-bartender-3)
+  - [Snipaste](#snipaste)
 - [3. 系统设置确认](#3-系统设置确认)
   - [3.1. 登录自动打开](#31-登录自动打开)
   - [3.2. bash\_profile文件](#32-bash_profile文件)
@@ -1142,6 +1143,11 @@ libs是程序使用的库
 
 菜单栏图标管理
 
+## Snipaste
+
+截图工具, 不用腾讯截图了
+
+https://zh.snipaste.com/
 
 
 # 3. 系统设置确认
