--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -8,7 +8,8 @@
   - [1.2. 流程简介](#12-流程简介)
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
-- [4. 定时器设置Set APIC Timer](#4-定时器设置set-apic-timer)
+- [配置定时器模式: 写LVTT](#配置定时器模式-写lvtt)
+- [4. 设置定时器: 写TMICT或TSC-Deadline](#4-设置定时器-写tmict或tsc-deadline)
   - [4.1. 定时器的触发](#41-定时器的触发)
   - [4.2. 整体流程](#42-整体流程)
   - [4.3. 入口代码](#43-入口代码)
@@ -54,7 +55,7 @@
 
 注: 详细见 `Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md`中APIC timer的操作步骤
 
-1. 虚拟机设置APIC timer, 主要包括两个, 写TMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
+1. 虚拟机设置APIC timer, 主要包括两个, 写TMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中(第一步肯定是设置LVTT寄存器, 见architecture的apic timer部分)
 2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用**hv timer**`<preemption timer>`, 其次使用**hrtimer**)作为中断源, 最后进入Guest模式
 
 intel下还有posted interrupt, amd下有doorbell机制
@@ -134,7 +135,9 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 /sys/kernel/debug/kvm/97073-19/vcpu3/lapic_timer_advance_ns
 ```
 
-# 4. 定时器设置Set APIC Timer
+# 配置定时器模式: 写LVTT
+
+# 4. 设置定时器: 写TMICT或TSC-Deadline
 
 步骤一和步骤二
 
