--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/4. VMX operation模式切换.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/4. VMX operation模式切换.md
@@ -3,19 +3,19 @@
 
 <!-- code_chunk_output -->
 
-* [0 概述](#0-概述)
-* [1 VM entry](#1-vm-entry)
-* [2 VM exit](#2-vm-exit)
-* [3 SMM双重监控处理下](#3-smm双重监控处理下)
+- [VMM软件的生命周期](#vmm软件的生命周期)
+- [VM entry](#vm-entry)
+- [VM exit](#vm-exit)
+- [SMM双重监控处理下](#smm双重监控处理下)
 
 <!-- /code_chunk_output -->
 
-# 0 概述
+# VMM软件的生命周期
 
 进入VMX operation模式后, VMM运行在root环境里, 而VM需要运行在non\-root环境里. 虚拟化平台中经常会发生从VMM进入VM, 或者从VM返回到VMM的情况.
 
-- VM entry(VM进入): 从VMX root operation切换到VMX non\-root operation就是VM entry, 表示**从VMM进入到VM执行guest软件**.
-- VM exit(VM退出): 从VMX non\-root operation切换到VMX root operation就是VM exit, 表示**从VM返回到VMM**. VMM接管工作, **VM失去处理器控制权**.
+- `VM entry`(VM进入): 从VMX root operation切换到VMX non\-root operation就是VM entry, 表示**从VMM进入到VM执行guest软件**.
+- `VM exit`(VM退出): 从VMX non\-root operation切换到VMX root operation就是VM exit, 表示**从VM返回到VMM**. VMM接管工作, **VM失去处理器控制权**.
 
 **VM\-exit发生**后, 处理器控制权重新回到VMM. **VMM**设置"**VM exit"退出的条件是基于虚拟化处理器目的**. 因此, **VMM**需要**检查VM**遇到了**什么事件退出**, 从而**虚拟化某些资源**, **返回一个虚拟化后的结果给guest软件**, 然后再次发起VM\-entry, 切入VM让guest软件继续执行.
 
@@ -23,13 +23,21 @@
 
 图2\-4来源于《Intel64 and IA\-32 Architecture Software Developer\'s Manaual》手册Vol.3C23\-2页的图, 清晰描述了VMM与VM(guest)之间的切换关系. 利用VM entry与VM exit行为, VMM在多个VM之间来回切换. 这个过程类似于OS对进程的调度, 而每个VM就像一个进程, VMM其中一个职能类似于OS进程调度器.
 
-![config](./images/4.png)
+![2020-11-26-22-40-48.png](./images/2020-11-26-22-40-48.png)
 
-# 1 VM entry
+上图说明了VMM及其来宾软件的生命周期以及它们之间的交互。 以下各项概述了该生命周期：
+
+* 软件通过执行VMXON指令进入VMX操作模式。
+* 然后，使用VM entry，VMM可以将客户机输入虚拟机（一次输入一个）。 VMM效果a
+使用指令VMLAUNCH和VMRESUME进入VM； 它使用VM出口重新获得控制权。
+•VM退出到VMM指定的入口点的传输控制。 VMM可以采取适合于VM退出原因的操作，然后可以使用VM条目返回虚拟机。
+•最终，VMM可能决定关闭自身并退出VMX操作。 它通过执行VMXOFF指令来实现。
+
+# VM entry
 
 首次
 
-# 2 VM exit
+# VM exit
 
 在**VM**中, **guest软件**无法知道**自己是否处于VM**之中(Intel保证guest软件没有任何途径可以检测). 因此, **guest软件不可能主动放弃控制权进行"VM exit"操作(！！！**).
 
@@ -45,7 +53,7 @@
 
 ........
 
-# 3 SMM双重监控处理下
+# SMM双重监控处理下
 
 在SMM dual\-monitor treatment机制下, VMX定义了另外两类的VM exit与VM entry, 它们是"SMM VM-exit"与"VM\-entry that return from SMM"(从SMM返回中进入)
 
