--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/4. VMX operation模式切换.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/4. VMX operation模式切换.md
@@ -21,17 +21,16 @@
 
 **首次进入VM**和**退出后再次进入VM**恢复执行, 使用**不同的指令进行(！！！**). **VMLAUNCH指令**发起**首次进入VM**, **VMRESUME指令**恢复被中断的VM执行.
 
-图2\-4来源于《Intel64 and IA\-32 Architecture Software Developer\'s Manaual》手册Vol.3C23\-2页的图, 清晰描述了VMM与VM(guest)之间的切换关系. 利用VM entry与VM exit行为, VMM在多个VM之间来回切换. 这个过程类似于OS对进程的调度, 而每个VM就像一个进程, VMM其中一个职能类似于OS进程调度器.
+下图清晰描述了VMM与VM(guest)之间的切换关系. 利用VM entry与VM exit行为, VMM在多个VM之间来回切换. 这个过程类似于OS对进程的调度, 而每个VM就像一个进程, VMM其中一个职能类似于OS进程调度器.
 
 ![2020-11-26-22-40-48.png](./images/2020-11-26-22-40-48.png)
 
 上图说明了VMM及其来宾软件的生命周期以及它们之间的交互。 以下各项概述了该生命周期：
 
 * 软件通过执行VMXON指令进入VMX操作模式。
-* 然后，使用VM entry，VMM可以将客户机输入虚拟机（一次输入一个）。 VMM效果a
-使用指令VMLAUNCH和VMRESUME进入VM； 它使用VM出口重新获得控制权。
-•VM退出到VMM指定的入口点的传输控制。 VMM可以采取适合于VM退出原因的操作，然后可以使用VM条目返回虚拟机。
-•最终，VMM可能决定关闭自身并退出VMX操作。 它通过执行VMXOFF指令来实现。
+* 然后，使用VM entry，VMM可以将客户机进入虚拟机（一次输入一个）。 VMM使用指令VMLAUNCH和VMRESUME让虚拟机进入VM； 它使用VM exits重新获得控制权。
+* VM退出到VMM指定的入口点的传输控制。 VMM可以采取适合于VM退出原因的操作，然后可以使用VM entry返回虚拟机。
+* 最终，VMM可能决定关闭自身并退出VMX操作。 它通过执行VMXOFF指令来实现。
 
 # VM entry
 
