--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMCS.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMCS.md
@@ -1,8 +1,10 @@
 
 VIRTUAL-MACHINE CONTROL STRUCTURE
 
-VMX non-root操作和VMX过渡由称为虚拟机控制结构（VMCS）的数据结构控制。
-通过称为VMCS指针的处理器状态组件（每个逻辑处理器一个）来管理对VMCS的访问。 VMCS指针的值是VMCS的64位地址。 使用指令VMPTRST和VMPTRLD读写VMCS指针。 VMM使用VMREAD，VMWRITE和VMCLEAR指令配置VMCS。
+VMX non-root操作和VMX模式过渡由称为**虚拟机控制结构**（VMCS）的数据结构控制。
 
-VMM可以为其支持的每个虚拟机使用不同的VMCS。 对于具有多个逻辑处理器（虚拟处理器）的虚拟机，VMM可以为每个虚拟处理器使用不同的VMCS。
+通过称为**VMCS指针**（**每个逻辑处理器一个**）的处理器状态组件来管理对VMCS的访问。VMCS指针的值是VMCS的**64位地址**。 
+* 使用指令**VMPTRST**和**VMPTRLD**读写**VMCS指针**。
+* VMM使用`VMREAD`，`VMWRITE`和`VMCLEAR`指令**配置VMCS**。
 
+VMM可以为其支持的**每个虚拟机**使用**不同的VMCS**。 对于具有多个逻辑处理器（虚拟处理器）的虚拟机，VMM可以为每个虚拟处理器使用不同的VMCS。
