--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -29,11 +29,11 @@ VMX架构中的很多功能在不同处理器架构有不同的支持, 比如之
 
 因此, VMM 需要检测当前VMX架构下的功能, 并进行相应设置.
 
-注: 本书主要参照`Intel开发者手册` 2012年8月版, order number为: `325462-044US`.
-
 # 1. 检测是否支持VMX架构
 
-VMX 架构是否支持, 使用 `CPUID.01H:ECX.VMX[5]`位来进行检测(详细见2.2.3)
+在系统软件进入VMX操作之前，它必须发现处理器中存在VMX支持。 系统软件可以使用CPUID确定处理器是否支持VMX操作。
+
+使用 `CPUID.01H:ECX.VMX[5]`位来进行检测(详细见2.2.3)
 
 # 2. 通过MSR组检查VMX能力
 
