--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. 检测是否支持VMX架构](#1-检测是否支持vmx架构)
+- [1. 检测是否支持VMX](#1-检测是否支持vmx)
 - [2. 通过MSR组检查VMX能力](#2-通过msr组检查vmx能力)
 - [3. 例子 2-1](#3-例子-2-1)
 - [4. 基本信息检测](#4-基本信息检测)
@@ -29,13 +29,21 @@ VMX架构中的很多功能在不同处理器架构有不同的支持, 比如之
 
 因此, VMM 需要检测当前VMX架构下的功能, 并进行相应设置.
 
-# 1. 检测是否支持VMX架构
+# 1. 检测是否支持VMX
 
 在系统软件进入VMX操作之前，它必须发现处理器中存在VMX支持。 系统软件可以使用CPUID确定处理器是否支持VMX操作。
 
-使用 `CPUID.01H:ECX.VMX[5]`位来进行检测(详细见2.2.3)
+使用 `CPUID.01H:ECX.VMX[5]`位来进行检测, 该位的值为1表示支持VMX功能。
 
 # 2. 通过MSR组检查VMX能力
+
+VMX体系结构被设计为**可扩展**的，以便将来VMX操作中的处理器可以支持VMX体系结构的第一代实现中不存在的其他功能。 使用一组**VMX功能MSR**将可扩展的VMX功能的**可用性报告**给软件。
+
+`CPUID.1:ECX.VMX[bit 5] = 1`指示处理器支持VMX操作和相关指令的能力。
+
+通过从一组功能MSR中读取值来确定对第26章和其他VMX各章中详述的特定功能的支持。 从MSR地址480H开始对这些MSR进行索引。 VMX功能MSR是只读的。 尝试使用WRMSR写入它们会产生一般保护异常（#GP（0））。 它们在不支持VMX操作的处理器上不存在。 尝试在此类处理器上读取它们（使用RDMSR）会产生一般保护异常（#GP（0））。
+
+
 
 VMX 架构提供了众多项目能力的检测, 包括: **VMX的基本信息**、**杂项信息**、**VPID与EPT能力**, 还有对**VMCS内**的`control fields`(**控制字段**)允许设置的位. 控制字段的位**允许被置为1**时, 代表着**处理器拥有这个能力**.
 
