--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
@@ -37,11 +37,9 @@ VMX架构中的很多功能在不同处理器架构有不同的支持, 比如之
 
 # 2. 通过MSR组检查VMX能力
 
-VMX体系结构被设计为**可扩展**的，以便将来VMX操作中的处理器可以支持VMX体系结构的第一代实现中不存在的其他功能。 使用一组**VMX功能MSR**将可扩展的VMX功能的**可用性报告**给软件。
+而VMX体系结构被设计为**可扩展**的，以便将来VMX操作中的处理器可以支持VMX体系结构的第一代实现中不存在的其他功能。 通过使用一组**VMX功能MSR**将可扩展的VMX功能的**可用性报告**给软件。
 
-`CPUID.1:ECX.VMX[bit 5] = 1`指示处理器支持VMX操作和相关指令的能力。
-
-通过从一组功能MSR中读取值来确定对第26章和其他VMX各章中详述的特定功能的支持。 从MSR地址480H开始对这些MSR进行索引。 VMX功能MSR是只读的。 尝试使用WRMSR写入它们会产生一般保护异常（#GP（0））。 它们在不支持VMX操作的处理器上不存在。 尝试在此类处理器上读取它们（使用RDMSR）会产生一般保护异常（#GP（0））。
+从MSR地址`480H`开始对这些MSR进行索引。 **VMX功能MSR是只读的**。 尝试使用`WRMSR`写入它们会产生**一般保护异常**（general-protection exception, `#GP(0)`）。 它们在不支持VMX操作的处理器上不存在。 尝试在此类处理器上读取它们（使用`RDMSR`）会产生一般保护异常（`#GP(0)`）。
 
 
 
@@ -59,10 +57,11 @@ VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific
 
 # 4. 基本信息检测
 
-`IA32_VMX_BASIC`寄存器用来检测 VMX 的基本能力信息, 如图 2-6 所示.
+`IA32_VMX_BASIC MSR`寄存器用来检测 VMX 的基本能力信息, 如图 2-6 所示.
 
 ![2020-02-24-22-27-54.png](./images/2020-02-24-22-27-54.png)
 
+* 
 ... ...
 
 bit 55 位为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器将影响最终的 VMCS 中的某些控制位, 如表 2-2 .
