--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
@@ -61,7 +61,17 @@ VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific
 
 ![2020-02-24-22-27-54.png](./images/2020-02-24-22-27-54.png)
 
-* 
+* bits `30:0`包含处理器使用的**31位**VMCS修订标识符(VMCS revision identifier, 也可称为VMCS ID)。 使用相同**VMCS修订标识符**的处理器对VMCS区域使用相同的大小（请参阅`bits 44:32`）。
+
+注: 早期版本指定VMCS修订标识符是此MSR的`31：0`位中的**32位字段**。 对于此更改之前产生的所有处理器，此MSR的第31位均**为0**。
+
+* bit 31一直为0
+* bits `44:32`表明软件应为VMXON区域和任何VMCS区域分配的字节数。 它是一个大于0且最大为4096的值（只有且仅当清除了位43:32时，才设置位44）。
+* bit 48指示可用于VMXON区域，每个VMCS以及VMCS中的指针所引用的数据结构的物理地址的宽度（I / O位图，virtual-APIC页面，VMX Transi-
+2 tions。）。如果0为0，则这些地址被限制为处理器的物理地址宽度。 如果是
+这些地址限制为32位。 对于支持Intel 64架构的处理器，该位始终为0。
+•如果将位49读为1，则逻辑处理器支持对系统管理中断和系统管理模式进行双监视器处理。 有关此处理的详细信息，请参见第34.15节。
+
 ... ...
 
 bit 55 位为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器将影响最终的 VMCS 中的某些控制位, 如表 2-2 .
