--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
@@ -65,12 +65,13 @@ VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific
 
 注: 早期版本指定VMCS修订标识符是此MSR的`31：0`位中的**32位字段**。 对于此更改之前产生的所有处理器，此MSR的第31位均**为0**。
 
-* bit 31一直为0
+* `bit 31`一直为0
 * bits `44:32`表明软件应为VMXON区域和任何VMCS区域分配的字节数。 它是一个大于0且最大为4096的值（只有且仅当清除了位43:32时，才设置位44）。
-* bit 48指示可用于VMXON区域，每个VMCS以及VMCS中的指针所引用的数据结构的物理地址的宽度（I / O位图，virtual-APIC页面，VMX Transi-
-2 tions。）。如果0为0，则这些地址被限制为处理器的物理地址宽度。 如果是
-这些地址限制为32位。 对于支持Intel 64架构的处理器，该位始终为0。
-•如果将位49读为1，则逻辑处理器支持对系统管理中断和系统管理模式进行双监视器处理。 有关此处理的详细信息，请参见第34.15节。
+* `bit 48`指示物理地址的宽度, 包括VMXON区域，每个VMCS以及VMCS中指向的数据结构(I/O位图，virtual-APIC页面，用于VMX转换的MSR区域)的指针物理地址宽度。 
+  * 如果是0, 这些地址仅限于处理器的物理地址宽度。 
+  * 如果是1, 这些地址限制为32位。 
+  * 对于支持Intel 64架构的处理器，该位始终为0。
+* 如果bit 49为1，则逻辑处理器支持对系统管理中断和系统管理模式进行双监视器处理。 有关此处理的详细信息，请参见第34.15节。
 
 ... ...
 
