--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
@@ -67,11 +67,17 @@ VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific
 
 * `bit 31`一直为0
 * bits `44:32`表明软件应为VMXON区域和任何VMCS区域分配的字节数。 它是一个大于0且最大为4096的值（只有且仅当清除了位43:32时，才设置位44）。
-* `bit 48`指示物理地址的宽度, 包括VMXON区域，每个VMCS以及VMCS中指向的数据结构(I/O位图，virtual-APIC页面，用于VMX转换的MSR区域)的指针物理地址宽度。 
+* `bit 48`指示区域物理地址的宽度, 包括VMXON区域，每个VMCS以及VMCS中指针指向的数据结构(I/O位图，virtual-APIC页面，用于VMX转换的MSR区域)的物理地址宽度。 
   * 如果是0, 这些地址仅限于处理器的物理地址宽度。 
   * 如果是1, 这些地址限制为32位。 
   * 对于支持Intel 64架构的处理器，该位始终为0。
-* 如果bit 49为1，则逻辑处理器支持对系统管理中断和系统管理模式进行双监视器处理。 有关此处理的详细信息，请参见第34.15节。
+* 如果`bit 49`为1，则逻辑处理器支持对系统管理中断(SMI)和系统管理模式(SMM)进行双监视器处理(dual-monitor treatment)。 有关此处理的详细信息，请参见第34.15节。
+* `bits 53:50`报告应用于VMCS，用于VMCS中的指针引用的数据结构（I/O位图，virtual-APIC页面，用于VMX转换的MSR区域）以及MSEG标头的**内存类型**。 如果软件需要访问这些数据结构（例如，修改MSR位图的内容），则可以配置分页结构以将它们映射到线性地址空间中。 如果这样做，它应该建立使用此MSR中报告的内存类型报告位53:50的映射
+
+在撰写本文时，所有支持VMX操作的处理器都将指示回写类型。 使用的值在表A-1中给出
+
+![2020-11-29-16-12-51.png](./images/2020-11-29-16-12-51.png)
+* bit 54为1, 表明支持当VM-exit是因为INS或OUTS指令而引发时, 
 
 ... ...
 
