--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
@@ -10,7 +10,7 @@
 - [5. 允许为 0 以及允许为 1 位](#5-允许为-0-以及允许为-1-位)
   - [5.1. 决定 VMX 支持的功能](#51-决定-vmx-支持的功能)
   - [5.2. 控制字段设置算法](#52-控制字段设置算法)
-- [6. VM-execution 控制字段](#6-vm-execution-控制字段)
+- [6. VM-execution Controls字段](#6-vm-execution-controls字段)
   - [6.1. Pin-based VM-execution control 字段](#61-pin-based-vm-execution-control-字段)
   - [6.2. primary processor-based VM-execution control 字段](#62-primary-processor-based-vm-execution-control-字段)
   - [6.3. secondary processor-based VM-execution control 字段](#63-secondary-processor-based-vm-execution-control-字段)
@@ -77,15 +77,14 @@ VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific
 在撰写本文时，所有支持VMX操作的处理器都将指示回写类型。 使用的值在表A-1中给出
 
 ![2020-11-29-16-12-51.png](./images/2020-11-29-16-12-51.png)
-* bit 54为1, 表明支持当VM-exit是因为INS或OUTS指令而引发时, 
-
-... ...
-
-bit 55 位为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器将影响最终的 VMCS 中的某些控制位, 如表 2-2 .
+* bit 54为1, 表明支持当VM-exit是因为INS或OUTS指令而引发时, 在VMCS的`"VM-exit instruction information"`字段里记录相应的信息.
+* `bit 55`为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器将影响最终的 VMCS 中的某些控制位, 如表 2-2 .
 
 ![2020-02-24-22-35-02.png](./images/2020-02-24-22-35-02.png)
 
 bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 55 为 0 时, 这些 VMCS 字段的
+* 如果将位56为1，则无论矢量如何，软件都可以使用VM Entry传递带有或不带有错误代码的**硬件异常**（请参见`VM-entry`的`VM-entry Control Fields`）。
+* 其他位保留且为0
 
 # 5. 允许为 0 以及允许为 1 位
 
@@ -99,7 +98,7 @@ bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 
 
 
 
-# 6. VM-execution 控制字段
+# 6. VM-execution Controls字段
 
 在 VMCS 区域的三个 VM-execution control 字段需要检查 VMX 能力寄存器来确认 default0 与 default1 位. 如下所示:
 
