--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX能力的检测.md
@@ -78,11 +78,11 @@ VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific
 
 ![2020-11-29-16-12-51.png](./images/2020-11-29-16-12-51.png)
 * bit 54为1, 表明支持当VM-exit是因为INS或OUTS指令而引发时, 在VMCS的`"VM-exit instruction information"`字段里记录相应的信息.
-* `bit 55`为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器将影响最终的 VMCS 中的某些控制位, 如表 2-2 .
+* `bit 55`为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器将影响最终的 VMCS 中的某些控制位, 如表 2-2.
 
 ![2020-02-24-22-35-02.png](./images/2020-02-24-22-35-02.png)
 
-bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 55 为 0 时, 这些 VMCS 字段的
+bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 如上图那样. 
 * 如果将位56为1，则无论矢量如何，软件都可以使用VM Entry传递带有或不带有错误代码的**硬件异常**（请参见`VM-entry`的`VM-entry Control Fields`）。
 * 其他位保留且为0
 
