--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -137,8 +137,11 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 # 配置定时器模式: 写LVTT
 
-```
+```cpp
+void kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
+{
 
+}
 ```
 
 # 4. 设置定时器: 写TMICT或TSC-Deadline
@@ -150,7 +153,7 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 ```cpp
 // 写寄存器 TMICT, 初始计数寄存器, one-shot/period
 void kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
-
+{
         case APIC_TMICT:
                 // tscdeadline模式, 直接中断返回
                 if (apic_lvtt_tscdeadline(apic))
@@ -162,6 +165,7 @@ void kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
                 // 启用lapic的timer
                 start_apic_timer(apic);
                 break;
+}
 ```
 
 ```cpp
