--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -55,18 +55,18 @@
 
 注: 详细见 `Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md`中APIC timer的操作步骤
 
-1. 虚拟机设置APIC timer, 主要包括两个, 写TMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中(第一步肯定是设置LVTT寄存器, 见architecture的apic timer部分)
-2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用**hv timer**`<preemption timer>`, 其次使用**hrtimer**)作为中断源, 最后进入Guest模式
+1. 设置timer模式, 通过写LVTT实现
+2. 虚拟机设置APIC timer, 主要包括两个, 写TMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
+3. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用**hv timer**`<preemption timer>`, 其次使用**hrtimer**)作为中断源, 最后进入Guest模式
 
 intel下还有posted interrupt, amd下有doorbell机制
 
-3. timer到期会发生vm-exit, 进入KVM中
+4.timer到期会发生vm-exit, 进入KVM中
 * preemption timer导致的vm-exit, exit reason就是preemption timer
-* hrtimer到期会产生外部中断, 导致虚拟机vm-exit, 这个exit reason是外部中断
-到期后处理
-4. KVM中调用timer处理函数, 注入中断, 进入guest模式
-5. 虚拟机执行时间中断处理函数, 发送EOI, 导致vm-exit
-6. KVM中模拟EOI行为后, 进入Guest模式
+* hrtimer到期会产生外部中断, 导致虚拟机vm-exit, 这个exit reason是外部中断到期后处理
+5. KVM中调用timer处理函数, 注入中断, 进入guest模式
+6. 虚拟机执行时间中断处理函数, 发送EOI, 导致vm-exit
+7. KVM中模拟EOI行为后, 进入Guest模式
 
 注: TMICT, Timer Initial Count寄存器
 
