--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/lapic_timer_advance/6. lapic timer提前到期.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/lapic_timer_advance/6. lapic timer提前到期.md
@@ -275,3 +275,21 @@ KVM: LAPIC: Tune lapic_timer_advance_ns smoothly
 
 d0f5a86a34072c46b7fe1b8f8768e666d9d6f87f
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+cat /sys/module/kvm/parameters/lapic_timer_advance_ns
+
+cat /sys/kernel/debug/kvm/108312-12/vcpu0/lapic_timer_advance_ns
