--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -157,6 +157,13 @@ void kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
 ## 5.1. 定时器的触发
 
 ```cpp
+vmx_handle_exit [kvm_intel]() {
+handle_wrmsr [kvm_intel]() {
+kvm_set_msr [kvm]() {
+vmx_set_msr [kvm_intel]() {
+kvm_set_msr_common [kvm]() {
+kvm_set_lapic_tscdeadline_msr [kvm]() {
+
 // 写寄存器 TMICT, 初始计数寄存器, one-shot/period
 void kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
 {
