--- a/Linux/Debug/debug/tools/trace/Ftrace/trace-cmd/基本介绍.md
+++ b/Linux/Debug/debug/tools/trace/Ftrace/trace-cmd/基本介绍.md
@@ -57,7 +57,7 @@ usage:
 
 trace-cmd record开始记录，ctrl+c停止记录并保存到trace.dat中。
 
-还可以通过trace-cmd reset对各种设置进行复位，然后trace-cmd start进行录制，trace-cmd stop停止录制，trace-cmd extract将数据保存到trace.dat中。
+还可以通过`trace-cmd reset`对各种设置进行复位，然后`trace-cmd start`进行录制，`trace-cmd stop`停止录制，`trace-cmd extract`将数据保存到trace.dat中。
 
 # trace-cmd record
 
@@ -138,3 +138,11 @@ trace-cmd record -e sched_switch -e sched_wakeup -s 1000000
 最终在目录下只有trace.dat.cpuX的文件，这些文件是中间文件，kernelshark是无法解析的
 
 解决方法有两种，一是在串口console中ctrl+c，另一种是通过kill发送SIGINT信号kill -2 pid。
+
+# 参考
+
+[trace-cmd: A front-end for Ftrace](https://lwn.net/Articles/410200/)
+
+https://lwn.net/Articles/341902/
+
+https://blog.csdn.net/weixin_44410537/article/details/103587609
