--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -72,6 +72,11 @@ intel下还有posted interrupt, amd下有doorbell机制
 
 注2: 还有exitless timer情况
 
+a. 设置timer
+b. 启动timer
+c. 停止timer
+d. 取消timer
+
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
 
 # 2. 相关结构体
