--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第2章 KVM原理简介/4. QEMU用户态设备模拟.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第2章 KVM原理简介/4. QEMU用户态设备模拟.md
@@ -32,6 +32,8 @@ QEMU除了提供**完全模拟的设备**（如：**e1000网卡**、**IDE磁盘*
 
 # virtio-blk-data-plane高性能块设备I/O
 
-QEMU还提供了叫作**virtio\-blk\-data\-plane**的一种**高性能的块设备I/O方式**，它最初在QEMU 1.4版本中被引入。virtio\-blk\-data\-plane与传统virtio\-blk相比，它为**每个块设备**单独分配**一个线程**用于**I/O处理**，**data\-plane线程**不需要与**原QEMU**执行**线程同步和竞争锁**，而且它使用**ioeventfd/irqfd机制**，同时利用**宿主机Linux上的AIO（异步I/O**）来处理**客户机的I/O请求**，使得块设备I/O效率进一步提高。
+QEMU还提供了叫作`virtio-blk-data-plane`的一种**高性能的块设备I/O方式**，它最初在QEMU 1.4版本中被引入。
+
+`virtio-blk-data-plane`与传统`virtio-blk`相比，它为**每个块设备**单独分配**一个线程**用于**I/O处理**，**data\-plane线程**不需要与**原QEMU**执行**线程同步和竞争锁**，而且它使用**ioeventfd/irqfd机制**，同时利用**宿主机Linux上的AIO（异步I/O**）来处理**客户机的I/O请求**，使得块设备I/O效率进一步提高。
 
 总之，QEMU既是一个**功能完整的虚拟机监控器**，也在**QEMU/KVM的软件栈**中承担**设备模拟**的工作。
