--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -70,11 +70,9 @@ PIT支持**周期性**和**单次计时**两种方式.
 
 ## 2.2. RTC: 实时时钟
 
-(2) **RTC(Real Time Clock, 实时时钟**): 通常**和CMOS集成**在一起, 由**CMOS电池供电**, 故能在**关机后继续计时**. 
+(2) **RTC(Real Time Clock, 实时时钟**): 支持**周期性**和**单次计时**两种方式.
 
-开机时读取，需要的时候写入，它能够提供**稳定的时钟脉冲**，其频率范围是`2~8192Hz`, 通常接**IRQ8**, 软件可以通过`0x70~0x71 I/O`端口操作. 
-
-RTC支持**周期性**和**单次计时**两种方式.
+通常**和CMOS集成**在一起, 由**CMOS电池供电**, 故能在**关机后继续计时**. 开机时读取，需要的时候写入，它能够提供**稳定的时钟脉冲**，其频率范围是`2~8192Hz`, 通常接**IRQ8**, 软件可以通过`0x70~0x71 I/O`端口操作. 
 
 此外, 它还可以配置成**每秒产生一次中断！！！**, 具有**闹钟功能**. 由于具有**关机继续计时**的功能, RTC常被用来作**为操作系统提供日期**. 即"年/月/日".
 
@@ -82,18 +80,17 @@ RTC支持**周期性**和**单次计时**两种方式.
 
 ## 2.3. TSC: 时间戳计数器
 
-(3) **TSC(Time Stamp Counter, 时间戳计数器**): 和普通时钟不同, 可以看作一个**单调递增的计数器(64位**), 是由x86架构引入的. 
+(3) **TSC(Time Stamp Counter, 时间戳计数器**): 由于**不产生时钟中断！！！**, 故无所谓周期性和单次计时方式.
+
+和普通时钟不同, 可以看作一个**单调递增的计数器(64位**), 是由x86架构引入的. 
 
 TSC在每个时钟信号到来时加1.
 
 TSC的主体是位于CPU里面的一个64位的TSC寄存器。每个CPU时钟周期其值加一。
 
-
 其**时钟频率**和**CPU的频率**相关, 操作系统在使用前**需要计算其频率**, 例如1GHz的TSC, 其值每纳秒增加1. 
 
 它是CPU内部的一个寄存器，根据CPU的周期进行递增. 通过**rdtsc**指令, 可以读取**当前TSC的值**. 通过它也可以校准RTC。很多系统都是通过读取这个时间来作为系统的时间
-
-由于**不产生时钟中断！！！**, 故无所谓周期性和单次计时方式.
 
 ## 2.4. LAPIC Timer: 本地时钟中断
 
@@ -119,7 +116,7 @@ HPET时钟通过**一个主计数器**, 和**32个比较器、匹配器**一起,
 
 例如, 可将**一个子时钟**配置成**每毫秒**产生一个**IRQ8中断**, **另一个子时钟**可配置成每毫秒产生一个**IRQ0中断**. 
 
-HPET可用于**代替传统PIT和RTC**, 此时平台的**IRQ0**、**IRQ8**中断**被HPET占用**。 cpu内部时钟源，同样响应0号中断响应timer_interrupt。Linux中hpet已经取代了pit，有hpet系统先选择hpet.
+HPET被设计用来**代替**传统8254 **PIT**可编程定时器的**全部功能**和实时钟**RTC**芯片的**周期性中断功能**, 此时平台的**IRQ0**、**IRQ8**中断**被HPET占用**。 cpu内部时钟源，同样响应0号中断响应timer_interrupt。Linux中hpet已经取代了pit，有hpet系统先选择hpet.
 
 HPET支持**周期性**和**单次计时**两种工作方式。
 
