--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -55,6 +55,9 @@
 
 注: 详细见 `Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md`中APIC timer的操作步骤
 
+guest的lapic是通过host上的hrtimer模拟的，guest的timer到期后，vCPU收到host上hrtimer interrupt，导致 vCPU vmexit，KVM把这个timer interrupt inject给guest，guest里最终感受到了timer fire的interrupt，这个过程比较长，等guest里感受到timer fire的时候，实际已经格外经历了上述虚拟化tax。 社区的advance lapic timer让guest的timer提前到期，这样加上虚拟化层的tax，期望guest感受到timer fire的时间与guest期望的timer到期时间接近。
+
+
 1. 设置timer模式, 通过写LVTT实现
 2. 虚拟机设置APIC timer, 主要包括两个, 写TMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
 3. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用**hv timer**`<preemption timer>`, 其次使用**hrtimer**)作为中断源, 最后进入Guest模式
