--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/5. kvmclock时钟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/5. kvmclock时钟.md
@@ -14,12 +14,12 @@
       - [2.2.1.1. 函数 kvm_register_clock](#2211-函数-kvm_register_clock)
       - [2.2.1.2. 函数 kvm_sched_clock_init](#2212-函数-kvm_sched_clock_init)
       - [2.2.1.3. 函数 clocksource_register_hz：时钟资源注册](#2213-函数-clocksource_register_hz时钟资源注册)
-      - [2.2.1.4. a. 函数 kvm_get_tsc_khz](#2214-a-函数-kvm_get_tsc_khz)
-      - [2.2.1.5. b. 函数 kvm_get_wallclock](#2215-b-函数-kvm_get_wallclock)
+      - [2.2.1.4. 函数 kvm_get_tsc_khz](#2214-函数-kvm_get_tsc_khz)
+      - [2.2.1.5. 函数 kvm_get_wallclock](#2215-函数-kvm_get_wallclock)
       - [2.2.1.6. 函数pvclock_read_wallclock的访问](#2216-函数pvclock_read_wallclock的访问)
     - [2.2.2. KVM clock 在host中](#222-kvm-clock-在host中)
-      - [2.2.2.1. （1） MSR_KVM_WALL_CLOCK](#2221-1-msr_kvm_wall_clock)
-      - [2.2.2.2. （2） MSR_KVM_SYSTEM_TIME](#2222-2-msr_kvm_system_time)
+      - [2.2.2.1. MSR_KVM_WALL_CLOCK](#2221-msr_kvm_wall_clock)
+      - [2.2.2.2. MSR_KVM_SYSTEM_TIME](#2222-msr_kvm_system_time)
   - [2.3. kvm_guest_time_update分析](#23-kvm_guest_time_update分析)
   - [2.4. 关于use_master_clock](#24-关于use_master_clock)
   - [2.5. KVMCLOCK的优点](#25-kvmclock的优点)
@@ -101,7 +101,7 @@ static struct clocksource kvm_clock = {
 
 ### 2.2.1. KVM clock 在 Guest 中
 
-源码路径： arch\x86\kernel\kvmclock.c pvclock.c.
+源码路径： `arch\x86\kernel\kvmclock.c pvclock.c`.
 
 kvmclock_init负责在[guest启动过程](http://oenhan.com/kvm-src-2-vm-run)中初始化kvm clock（kvmclock 驱动），首先更新了两个MSR值：
 
@@ -228,7 +228,7 @@ int __clocksource_register_scale(struct clocksource *cs, u32 scale, u32 freq)
 
 下面详细看上面复写的四个函数
 
-#### 2.2.1.4. a. 函数 kvm_get_tsc_khz
+#### 2.2.1.4. 函数 kvm_get_tsc_khz
 
 ```cpp
 //获取pv clock信息转换成hz
@@ -246,7 +246,7 @@ static unsigned long kvm_get_tsc_khz(void)
 }
 ```
 
-#### 2.2.1.5. b. 函数 kvm_get_wallclock
+#### 2.2.1.5. 函数 kvm_get_wallclock
 
 ```cpp
 static void kvm_get_wallclock(struct timespec *now)
@@ -364,7 +364,7 @@ VMM 中 kvmclock实现
 
 Guest中使用了wrmsr指令，Host会感知，然后进入到kvm_set_msr_common 中处理。
 
-#### 2.2.2.1. （1） MSR_KVM_WALL_CLOCK
+#### 2.2.2.1. MSR_KVM_WALL_CLOCK
 
 msr的实现：
 
@@ -465,7 +465,7 @@ static int __kvm_read_guest_page(struct kvm_memory_slot *slot, gfn_t gfn,
 }
 ```
 
-#### 2.2.2.2. （2） MSR_KVM_SYSTEM_TIME
+#### 2.2.2.2. MSR_KVM_SYSTEM_TIME
 
 ```cpp
 case MSR_KVM_SYSTEM_TIME: {
