--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/0. 概述.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/0. 概述.md
@@ -15,4 +15,6 @@ VMCB包含：
 * 各种控制位，它们指定guest的**执行环境**或指示在**运行guest代码之前**要执行的**特殊操作**
 * **guest处理器状态**（例如控制寄存器等）
 
+VMCB 的 layout 见附件
+
 请注意，SMM处理程序**内部不支持VMRUN**，并且**行为未定义**。
