--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/附1. VMCB布局图[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/附1. VMCB布局图[code].md
@@ -1,7 +1,5 @@
 
-# 数据结构
-
-## SVM 结构体
+# SVM 结构体
 
 ```cpp
 // arch/x86/include/asm/svm.h
@@ -16,7 +14,7 @@ struct vmcb {
 * `u8 reserved_control[1024 - sizeof(struct vmcb_control_area)]`: 1024字节的大小限制
 * `struct vmcb_save_area save`: 保存guest状态
 
-## 控制区域
+# 控制区域
 
 ```cpp
 // arch/x86/include/asm/svm.h
