--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/29. AVIC/1. 介绍.md
@@ -3,17 +3,18 @@
 
 <!-- code_chunk_output -->
 
-- [1. 中断](#1-中断)
+- [1. avic介绍](#1-avic介绍)
   - [1.1. 没有硬件加速](#11-没有硬件加速)
-  - [1.2. 硬件加速](#12-硬件加速)
+  - [1.2. avic硬件加速](#12-avic硬件加速)
+  - [1.3. IO设备到vCPU](#13-io设备到vcpu)
 - [2. LAPIC寄存器访问: Local APIC Register Access](#2-lapic寄存器访问-local-apic-register-access)
 - [3. IPIs](#3-ipis)
-  - [3.1. 软件中断: Self-IPIs, vCPU内部](#31-软件中断-self-ipis-vcpu内部)
+  - [3.1. 软件发起中断: 核内中断, vCPU内部](#31-软件发起中断-核内中断-vcpu内部)
   - [3.2. 处理器间中断: 核间中断, vCPU之间](#32-处理器间中断-核间中断-vcpu之间)
 
 <!-- /code_chunk_output -->
 
-# 1. 中断
+# 1. avic介绍
 
 在虚拟计算机系统中，**每个guest**操作系统都需要**访问中断控制器**以发送和接收**设备中断！！！** 和**核间中断！！！**。
 
@@ -25,14 +26,14 @@
 
 鉴于现代计算机系统中**设备中断**和**处理器间中断**的高发生率，LAPIC的仿真是VMM的重大负担。
 
-## 1.2. 硬件加速
+## 1.2. avic硬件加速
 
 通过将**硬件加速**应用于**中断处理**的以下组件，**AVIC**体系结构降低了虚拟环境中guest中断处理的开销：
 
 * 为**guest操作系统**提供对性能至关重要的**中断控制器！！！(interrupt controller)寄存器的访问**
-* 一个guest中, **处理器内部中断**(self ipi?); **处理器之间中断**
+* 一个guest中, **处理器内部中断**(self ipi?)和**处理器之间中断**(Initiating intra- and inter-processor interrupts (IPIs) in and between virtual processors in a guest)
 
-Initiating intra- and inter-processor interrupts (IPIs) in and between virtual processors in a guest
+## 1.3. IO设备到vCPU
 
 AVIC硬件无法直接解决从**I/O设备！！！** 到**虚拟处理器！！！** 的**虚拟中断传递！！！** 的**加速问题**。该加速将由**I/O内存管理单元**（IOMMU）提供。
 
@@ -64,7 +65,9 @@ VMM从backing页读取guest写入的配置、控制和命令信息，并**将状
 
 IPI有两个意思, Intra-process interrupt(处理器内部中断, 也称为`self-IPI`) 和 Inter-processor interrupt(处理器之间中断), 所以有些资料会统称IPIs.
 
-## 3.1. 软件中断: Self-IPIs, vCPU内部
+## 3.1. 软件发起中断: 核内中断, vCPU内部
+
+注: 这里的软件中断不是体系结构中的软件中断?.
 
 **软件启动的中断**(Software-initiated Interrupts)。 
 
