--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/附1. VMCB布局图[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/附1. VMCB布局图[code].md
@@ -14,7 +14,7 @@ struct vmcb {
 * `u8 reserved_control[1024 - sizeof(struct vmcb_control_area)]`: 1024字节的大小限制
 * `struct vmcb_save_area save`: 保存guest状态
 
-# 控制区域
+# 控制区域: Control Area
 
 ```cpp
 // arch/x86/include/asm/svm.h
@@ -71,4 +71,83 @@ enum intercept_words {
 };
 ```
 
+# 状态保存区域: State Save Area
 
+```cpp
+// arch/x86/include/asm/svm.h
+struct vmcb_save_area {
+        struct vmcb_seg es;
+        struct vmcb_seg cs;
+        struct vmcb_seg ss;
+        struct vmcb_seg ds;
+        struct vmcb_seg fs;
+        struct vmcb_seg gs;
+        struct vmcb_seg gdtr;
+        struct vmcb_seg ldtr;
+        struct vmcb_seg idtr;
+        struct vmcb_seg tr;
+        u8 reserved_1[43];
+        u8 cpl;
+        u8 reserved_2[4];
+        u64 efer;
+        u8 reserved_3[112];
+        u64 cr4;
+        u64 cr3;
+        u64 cr0;
+        u64 dr7;
+        u64 dr6;
+        u64 rflags;
+        u64 rip;
+        u8 reserved_4[88];
+        u64 rsp;
+        u8 reserved_5[24];
+        u64 rax;
+        u64 star;
+        u64 lstar;
+        u64 cstar;
+        u64 sfmask;
+        u64 kernel_gs_base;
+        u64 sysenter_cs;
+        u64 sysenter_esp;
+        u64 sysenter_eip;
+        u64 cr2;
+        u8 reserved_6[32];
+        u64 g_pat;
+        u64 dbgctl;
+        u64 br_from;
+        u64 br_to;
+        u64 last_excp_from;
+        u64 last_excp_to;
+        
+        /*
+         * The following part of the save area is valid only for
+         * SEV-ES guests when referenced through the GHCB.
+         */
+        u8 reserved_7[104];
+        u64 reserved_8;         /* rax already available at 0x01f8 */
+        u64 rcx;
+        u64 rdx;
+        u64 rbx;
+        u64 reserved_9;         /* rsp already available at 0x01d8 */
+        u64 rbp;
+        u64 rsi;
+        u64 rdi;
+        u64 r8;
+        u64 r9;
+        u64 r10;
+        u64 r11;
+        u64 r12;
+        u64 r13;
+        u64 r14;
+        u64 r15;
+        u8 reserved_10[16];
+        u64 sw_exit_code;
+        u64 sw_exit_info_1;
+        u64 sw_exit_info_2;
+        u64 sw_scratch;
+        u8 reserved_11[56];
+        u64 xcr0;
+        u8 valid_bitmap[16];
+        u64 x87_state_gpa;
+} __packed;
+```
