--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/5. 安装客户机.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/5. 安装客户机.md
@@ -17,7 +17,7 @@
 首先，需要创建一个**镜像文件**。我们使用上节中生成好的**qemu\-img**工具来完成这个任务。它不仅用于**创建guest**，还可以在后续**管理guest image**。详见“qemu\-img \-\-help”及“man qemu\-img”。
 
 ```
-[root@kvm-host ~]# qemu-img create -f raw rhel7.img 40G￼
+[root@kvm-host ~]# qemu-img create -f raw rhel7.img 40G
 Formatting 'rhel7.img', fmt=raw size=42949672960
 ```
 
@@ -62,10 +62,10 @@ Formatting 'rhel7.img', fmt=raw size=42949672960 preallocation=full￼
 启动客户机，并在其中用准备好的ISO安装系统，命令行如下：
 
 ```
-qemu-system-x86_64 -enable-kvm -m 8G -smp 4 -boot once=d -cdrom RHEL-7.2-20151030.0-Server-x86_64-dvd1.iso rhel7.img
+qemu-system-x86_64 -enable-kvm -m 8G -smp 4 -boot once=d -cdrom RHEL-7.2-20151030.0-Server-x86_64-dvd1.iso rhel7.img -device piix3-usb-uhci -device usb-tablet
 ```
 
-其中，`-m 8G`是给客户机分配8G内存，`-smp 4`是指定客户机为对称多处理器结构并分配4个CPU，`-boot once=d`是指定系统的启动顺序为首次光驱，以后再使用默认启动项（硬盘）￼，`-cdrom **`是分配**客户机的光驱**。
+其中，`-m 8G`是给客户机分配8G内存，`-smp 4`是指定客户机为对称多处理器结构并分配4个CPU，`-boot once=d`是指定系统的启动顺序为首次光驱，以后再使用默认启动项（硬盘），`-cdrom **`是分配**客户机的光驱**, `-device piix3-usb-uhci -device usb-tablet`减少鼠标偏移。
 
 # 4 安装虚拟机
 
