--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/6. 启动第一个KVM客户机.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/6. 启动第一个KVM客户机.md
@@ -3,12 +3,12 @@
 
 <!-- code_chunk_output -->
 
-* [1 登录虚拟机](#1-登录虚拟机)
-* [2 QEMU监视器窗口](#2-qemu监视器窗口)
+- [1. 登录虚拟机](#1-登录虚拟机)
+- [2. QEMU监视器窗口](#2-qemu监视器窗口)
 
 <!-- /code_chunk_output -->
 
-# 1 登录虚拟机
+# 1. 登录虚拟机
 
 在安装好了系统之后，就可以使用镜像文件来启动并登录到自己安装的系统之中了。
 
@@ -24,7 +24,7 @@ VNC server running on ‘::1:5900’
 
 ![](./images/2019-05-15-23-01-05.png)
 
-# 2 QEMU监视器窗口
+# 2. QEMU监视器窗口
 
 在通过VNC链接到QEMU窗口后，可以按组合键**Ctrl+Alt+2**切换到**QEMU监视器窗口**。在监视器窗口中可以执行一些命令，比如执行“**info kvm**”命令来查看**当前QEMU是否使用KVM**，如图3-12所示（显示为**kvm support：enabled**）。
 
