--- Auto-Git Commit ---

--- a/Linux/Cgroup/简要介绍/2. 浅谈Cgroups V2.md
+++ b/Linux/Cgroup/简要介绍/2. 浅谈Cgroups V2.md
@@ -113,3 +113,16 @@ Cgroups v1 使用 `release_agent` 和 `notify_on_release` 在 v2 中被移除。
 
 当前在这个文件中只含有一个 key 就是 populated，对应的 value 是 0。0 表示 cgroup 中没有 process，1 表示 cgroup 中包含 process。
 
+# cgroup.stat file
+
+在 Cgroups v2 hierarchy 下的每个 group 都会包含一个只读文件 cgroup.stat。它的内容也是 key-value 的形式。当前这个文件中包含如下两个 key:
+
+
+
+nr_descendants
+
+表示cgroup中存活的subgroup的数量
+
+nr_dying_descendants
+
+表示cgroup中已经死亡的cgroup的数量
