--- Auto-Git Commit ---

--- a/Linux/Cgroup/简要介绍/2. 浅谈Cgroups V2.md
+++ b/Linux/Cgroup/简要介绍/2. 浅谈Cgroups V2.md
@@ -117,12 +117,18 @@ Cgroups v1 使用 `release_agent` 和 `notify_on_release` 在 v2 中被移除。
 
 在 Cgroups v2 hierarchy 下的每个 group 都会包含一个只读文件 cgroup.stat。它的内容也是 key-value 的形式。当前这个文件中包含如下两个 key:
 
+* `nr_descendants`, 表示cgroup中存活的subgroup的数量
+* `nr_dying_descendants`, 表示cgroup中已经死亡的cgroup的数量
+
+# 后代 Cgroups 数量限制
 
 
-nr_descendants
+在 Cgroups v2 hierarchy 中还包含了两个用于查看和设置该 Cgroups 下的后代 Cgroups 数量的限制文件:
 
-表示cgroup中存活的subgroup的数量
+* `cgroup.max.depth` (since Linux 4.14)
 
-nr_dying_descendants
+这个文件定义子cgroup的最大深度。0意味着不能创建cgroup。如果尝试创建cgroup，会报EAGAIN错误；max表示没有限制，默认值是max。
 
-表示cgroup中已经死亡的cgroup的数量
+* `cgroup.max.descendants` (since Linux 4.14)
+
+当前可以创建的活跃cgroup目录的最大数量，默认值”max”表示不限制。超过限制，返回EAGAIN。
